2020-12-08  UNRELEASED

  t/02-javascript.t
   Fix failing t-tests due to use of long-double or quadmath libraries (more
    precision than the t-test was providing). There are still many failures
    of this test on every Solaris box, but at the moment I have no way to
    try to debug on that platform (I will be looking for volunteers to help
    out with this).

  lib/Text/KnuthPlass.xs
   Fix failing Windows t-tests where libraries already contained an _unlink
    module (rename to _unlinkKP).

  Build.PL, README.md, MANIFEST
   Change authorship statement, write a much more complete README 
    (with markdown).

  t/00-load.t, t/02-javascript.t, t/pod-coverage.t, t/pod.t, 
    lib/Text/KnuthPlass.pm
   Fix Perl Critic complaints. Currently ignoring "multiple package 
    declarations" in KnuthPlass.pm, might in the future split up the file.

  tools/1_pc.pl, tools/2_t-tests.pl, tools/3_examples.pl, MANIFEST
   Add some tools for testing and illustrating usage.

2011-03-17  Simon Cozens <simon@simon-cozens.org>

  * lib/Text/KnuthPlass.pm: 1.02 release removes unnecessary dependencies.

  * t/02-javascript.t: Remove dependency on JSON::Syck

  * t/01-nodes.t: De-5.10.0-ify.

  * lib/Text/KnuthPlass.pm: Oop.

  * Changes: This is 1.01.

  * t/04-regression.t: Compare against Perl.

  * lib/Text/KnuthPlass.pm, lib/Text/KnuthPlass.xs: Another refactoring to
  speed up.

2011-03-16  Simon Cozens <simon@simon-cozens.org>

  * lib/Text/KnuthPlass.pm: Make debugging output debugging-only.

  * META.yml: This should be autogenerated, not under VC.

  * Makefile.PL: We're using Build.

  * t/03-center.t: Blah

  * lib/Text/KnuthPlass.xs: Speed up array access, fix another leak.

2011-03-15  Simon Cozens <simon@simon-cozens.org>

  * MANIFEST, META.yml, lib/Text/KnuthPlass.pm, lib/Text/KnuthPlass.xs: I'm
  calling this 1.0 because it doesn't leak loads of memory now.

  * lib/Text/KnuthPlass.xs: Rewrite to avoid most memory leaks.
