@@ -1,7 +1,14 @@
 #!perl -T
-
 use strict;
 use warnings;
+
+BEGIN {
+  unless ($ENV{'AUTHOR_TESTING'}) {
+    print qq{1..0 # SKIP these tests are for testing by the author\n};
+    exit
+  }
+}
+
 use Test::More;
 
 # Ensure a recent version of Test::Pod
