@@ -1,4 +1,4 @@
-2020-12-08  UNRELEASED
+2020-12-09  UNRELEASED
 
   t/02-javascript.t
    Fix failing t-tests due to use of long-double or quadmath libraries (more
@@ -19,6 +19,7 @@
     lib/Text/KnuthPlass.pm
    Fix Perl Critic complaints. Currently ignoring "multiple package 
     declarations" in KnuthPlass.pm, might in the future split up the file.
+    Move pod and pod-coverage to "author testing only".
 
   tools/1_pc.pl, tools/2_t-tests.pl, tools/3_examples.pl, MANIFEST
    Add some tools for testing and illustrating usage.
